crates/claptrap-core/tests/snapshots/tests__arg__num_args-multi_positional2.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_word='word'
claptrap_file=('file1' 'file2' 'file3')
