crates/claptrap-core/tests/snapshots/tests__arg__num_args-tuples1.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_file=('in-file' 'out-file')
