crates/claptrap-core/tests/snapshots/tests__arg__overrides_with.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_debug='true'
claptrap_color='true'
claptrap_flag='false'
