crates/claptrap-core/tests/snapshots/tests__arg__overrides_with_all.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_color='true'
claptrap_flag='false'
claptrap_debug='false'
