crates/claptrap-core/tests/snapshots/tests__arg__raw.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_everything=('--foo' 'something' '--' '-v' '-v' '-v' '-b' '-b' '-b' '--baz' '-q' '-u' '-x')
