crates/claptrap-core/tests/snapshots/tests__arg__required-1.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_cfg='file.conf'
